--- a/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/css/deploy-content.css
+++ b/OPENPAAS-IEDA-CONTROLLER/src/main/resources/static/css/deploy-content.css
@@ -17,3 +17,4 @@
 #iaas_config_mgnt_wrap .openstack-icon {  width:80%; margin-top:17%; margin-bottom:10px; }
 #iaas_config_mgnt_wrap .google-icon {  width:85%; margin-top:3%; margin-bottom:5px;}
 #iaas_config_mgnt_wrap .vSphere-icon {  width:80%; margin-top:20%; margin-bottom:15px; }
+#iaas_config_mgnt_wrap .azure-icon {  width:80%; margin-top:5%; margin-bottom:5px;}
